--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <p class="two" id="greetingText">I really like your name btw!</p>
       </div>
       <div class="three">
-        <p>It's Valentine!!! :D</p>
+        <p>Valentines is just around the corner!!!</p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Yeee! Love and blah blah...
+            Will you be my Valentine, Baba? I love you and blah blah...
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -36,11 +36,11 @@
         <p class="idea-1">That's what I was going to do.</p>
         <p class="idea-2">But then I stopped.</p>
         <p class="idea-3">
-          I realised, I wanted to do something <strong>special</strong>.
+          I realized, I wanted to do something <strong>special</strong>.
         </p>
         <p class="idea-4">Because,</p>
         <p class="idea-5">
-          You are Special
+          You are my Special BABA
           <span>:)</span>
         </p>
         <p class="idea-6">
@@ -51,7 +51,7 @@
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
+          <h3 class="wish-hbd">Happy Valentine's Day My Gorgeous Babaaa</h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
