--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Happy Valentine's Day My Gorgeous Babaaa</h3>
-          <h5 id="wishText">kuch kuch</h5>
+          <h5>This is our first ever Valentines as a couple!<br>(a lot of first times together hihi)</h5>
         </div>
       </div>
       <div class="seven">
