--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Happy Valentine's Day My Gorgeous Babaaa</h3>
-          <h5>This is our first ever Valentines as a couple!<br>(a lot of first times together hihi)</h5>
+          <h5 class="wish">This is our first ever Valentines as a couple!<br>(a lot of first times together hihi)</h5>
         </div>
       </div>
       <div class="seven">
@@ -124,8 +124,8 @@
         </svg>
       </div>
       <div class="nine">
-        <p>Okay, now come back and tell me if you liked it.</p>
-        <p id="replay">Or click, if you want to watch it again.</p>
+        <p>sooo now, will you be my Valentine?</p>
+        <p id="replay">just send me a reply babaaa *wink*</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
